seaweedfs/namespace-seaweedfs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seaweedfs
  labels:
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
