seaweedfs/seaweedfs.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: seaweedfs

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs-s3
  namespace: seaweedfs
  labels:
    app: seaweedfs-s3
    app.kubernetes.io/name: seaweedfs-s3
    app.kubernetes.io/instance: seaweedfs-s3
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweedfs-s3
  template:
    metadata:
      labels:
        app: seaweedfs-s3
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
        fsGroupChangePolicy: "OnRootMismatch"
      nodeSelector:
        kubernetes.io/hostname: "w386.k8s.my.lan"
      containers:
        # MASTER
        - name: master
          image: chrislusf/seaweedfs:latest
          args:
            - "master"
            - "-ip=0.0.0.0"
            - "-mdir=/data"
            - "-volumeSizeLimitMB=1024"
            - "-metricsPort=9091"
          ports:
            - name: master
              containerPort: 9333
            - name: master-metrics
              containerPort: 9091
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /cluster/status
              port: 9333
            initialDelaySeconds: 15
            periodSeconds: 60

        # VOLUME
        - name: volume
          image: chrislusf/seaweedfs:latest
          args:
            - "volume"
            - "-ip=0.0.0.0"
            - "-dir=/data"
            - "-max=0"
            - "-mserver=127.0.0.1:9333"
            - "-metricsPort=9092"
          ports:
            - name: volume
              containerPort: 8080
            - name: volume-metrics
              containerPort: 9092
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 60

        # FILER
        - name: filer
          image: chrislusf/seaweedfs:latest
          args:
            - "filer"
            - "-ip=0.0.0.0"
            - "-master=127.0.0.1:9333"
            - "-metricsPort=9093"
          ports:
            - name: filer
              containerPort: 8888
            - name: filer-metrics
              containerPort: 9093
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 60

        # S3 GATEWAY
        - name: s3
          image: chrislusf/seaweedfs:latest
          args:
            - "s3"
            - "-ip.bind=0.0.0.0"
            - "-port=8333"
            - "-filer=127.0.0.1:8888"
          ports:
            - name: s3
              containerPort: 8333
          #readinessProbe:
          #  httpGet:
          #    path: /
          #    port: 8333
          #  initialDelaySeconds: 5
          #  periodSeconds: 10

      volumes:
        - name: data
          hostPath:
            path: /storage/k8s/seaweedfs
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: s3
  namespace: seaweedfs
  labels:
    app: seaweedfs-s3
spec:
  type: NodePort
  selector:
    app: seaweedfs-s3
  ports:
    - name: s3
      port: 8333
      targetPort: 8333
      nodePort: 31833

---
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-metrics
  namespace: seaweedfs
  labels:
    app: seaweedfs-s3
spec:
  type: ClusterIP
  selector:
    app: seaweedfs-s3
  ports:
    - name: master-metrics
      port: 9091
      targetPort: master-metrics
    - name: volume-metrics
      port: 9092
      targetPort: volume-metrics
    - name: filer-metrics
      port: 9093
      targetPort: filer-metrics
