seaweedfs/service-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3
  namespace: seaweedfs
  labels:
    app: seaweedfs-s3
spec:
  selector:
    app: seaweedfs-s3
  ports:
    - name: s3
      port: 8333
      targetPort: 8333
