seaweedfs/ingress-andreybondarenko-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: seaweedfs
  name: andreybondarenko-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-geoip-country@kubernetescrd,traefik-robots-disallow-all@kubernetescrd
  labels:
    app: seaweedfs-s3
    app.kubernetes.io/managed-by: argoCD
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - s3.andreybondarenko.com
      secretName: seaweedfs-tls

  rules:
    - host: s3.andreybondarenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3
                port:
                  number: 8333
