seaweedfs/traefik-ingres.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hsts
  namespace: seaweedfs
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: seaweedfs
  name: andreybondarenko-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  labels:
    app: seaweedfs-s3
    app.kubernetes.io/managed-by: argoCD
spec:
  ingressClassName: traefik

  rules:
    - host: s3.andreybondarenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3
                port:
                  number: 8333
