seaweedfs/network-policy-seaweedfs-allow-ingress-from-talos-backup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seaweedfs-allow-ingress-from-talos-backup
  namespace: seaweedfs
spec:
  podSelector:
    matchLabels:
      app: seaweedfs-s3
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: talos-backup
          podSelector:
            matchLabels:
              app: talos-backup
      ports:
        - {protocol: TCP, port: 8333}
